@@ -1303,10 +1303,14 @@ class FuncargManager:
             obj = getattr(holderobj, name)
             if not callable(obj):
                 continue
+            # to avoid breaking on magic global callables
+            # we explicitly check if we get a sane code object
+            # else having mock.call in the globals fails for example
+            code = py.code.getrawcode(obj)
+            if not inspect.iscode(code):
+                continue
             # resource factories either have a pytest_funcarg__ prefix
             # or are "funcarg" marked
-            if not callable(obj):
-                continue
             marker = getattr(obj, "_pytestfactory", None)
             if marker is not None:
                 assert not name.startswith(self._argprefix)
